fix:: 引入RabbitMqtt配置 使用放开 MqttInboundConfig.inbound 方法注释,修改配置文件地址

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
             <artifactId>springfox-boot-starter</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <!--Spring集成MQTT-->
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mqtt</artifactId>
+        </dependency>
         <!-- fastdfs -->
         <dependency>
             <groupId>com.github.tobato</groupId>
