--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,11 @@ logging:
 springfox:
   documentation:
     enabled: true
+
+# rabbitmq 配置
+rabbitmq:
+  mqtt:
+    url: tcp://localhost:1883
+    username: guest
+    password: guest
+    defaultTopic: testTopic
