--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,25 @@ spring:
   servlet:
     multipart.maxFileSize : 10240KB
     multipart.maxRequestSize: 102400KB
+  redis:
+    # Redis服务器连接端口
+    port: 6379
+    # Redis服务器地址
+    host: 192.168.12.59
+    # Redis数据库索引（默认为0）
+    database: 0
+    # Redis服务器连接密码（默认为空）
+    password: Intellifusion@20190108
+    # 连接池最大连接数（使用负值表示没有限制）
+    jedis.pool.max-active: 8
+    # 连接池最大阻塞等待时间（使用负值表示没有限制）
+    jedis.pool.max-wait: -1ms
+    # 连接池中的最大空闲连接
+    jedis.pool.max-idle: 8
+    # 连接池中的最小空闲连接
+    jedis.pool.min-idle: 0
+    # 连接超时时间（毫秒）
+    timeout: 5000ms
   datasource:
 #    username: root
 #    password: introcks1234
@@ -29,9 +48,10 @@ spring:
             url: jdbc:mysql://192.168.13.48:32000/moe?useUnicode=true&characterEncoding=utf8&useSSL=false
 #            driver-class-name: com.mysql.cj.jdbc.Driver
 
-mybatis:
-  mapper-locations: classpath:mapping/*mapper.xml
-  type-aliases-package: com.example.entity
+mybatis-plus:
+  mapper-locations: classpath:mybatis/mapper/*.xml
+#  config-location: classpath:mybatis/mybatis.cfg.xml
+  type-aliases-package: com.gumo.demo.entity
 #showSql
 logging:
   level:
