--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,11 @@
 <!--            <artifactId>reports</artifactId>-->
 <!--            <version>1.0</version>-->
 <!--        </dependency>-->
+        <!-- mail -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
