Revert "fix::添加分布式锁注解"

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,8 +65,8 @@ spring:
       datasource:
         master:
             username: root
-            password: introcks1234
-            url: jdbc:mysql://192.168.13.77:32000/moe?useUnicode=true&characterEncoding=utf8&useSSL=false
+            password: 123456
+            url: jdbc:mysql://127.0.0.1:3306/moe?useUnicode=true&characterEncoding=utf8&useSSL=false
 #            driver-class-name: com.mysql.cj.jdbc.Driver
         test:
             username: root
