--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.4.0</version>
         </dependency>
+        <!-- apollo -->
+        <dependency>
+            <groupId>com.ctrip.framework.apollo</groupId>
+            <artifactId>apollo-client</artifactId>
+            <version>1.3.0</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-security</artifactId>-->
