--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.4.0</version>
         </dependency>
+        <!-- feign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>3.0.3</version>
+        </dependency>
         <!-- apollo -->
         <dependency>
             <groupId>com.ctrip.framework.apollo</groupId>
