add::引入log4j2 升级版本

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -116,6 +116,7 @@ mybatis-plus:
   type-aliases-package: com.gumo.demo.entity
 #showSql
 logging:
+  config: classpath:log4j2.xml
   level:
     com:
       example:
