--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,16 @@
             <artifactId>apollo-client</artifactId>
             <version>1.3.0</version>
         </dependency>
+        <!-- 引入 mongodb -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <!-- 热部署导入包 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
