--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,7 +60,7 @@ spring:
 #    driver-class-name: com.mysql.jdbc.Driver
 #   多数据源
     dynamic:
-      primary: master #设置默认的数据源或者数据源组,默认值即为master
+      primary: master #设置默认的数据源或者数据源组,默认值即为masterl
       strict: false #严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
       datasource:
         master:
