--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,11 @@
             <artifactId>cxf-rt-transports-http</artifactId>
             <version>3.1.14</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version>
+        </dependency>
         <!-- xstream转换 -->
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
