--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,18 @@
             <artifactId>jsoup</artifactId>
             <version>1.14.3</version>
         </dependency>
+        <!-- 添加 Okio 库依赖 -->
+        <dependency>
+            <groupId>com.squareup.okio</groupId>
+            <artifactId>okio</artifactId>
+            <version>1.15.0</version>
+        </dependency>
+        <!-- 添加 OkHttp 库依赖 -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.13.1</version>
+        </dependency>
         <!-- xstream转换 -->
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
