--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,12 @@
             <artifactId>jsoup</artifactId>
             <version>1.14.3</version>
         </dependency>
+        <!-- 引入pinyin4j依赖 -->
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
         <!-- 添加 Okio 库依赖 -->
         <dependency>
             <groupId>com.squareup.okio</groupId>
